--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              etcsetera
-email:              mwhitmeyer@berkeley.edu
+email:              mdwhitmeyer@gmail.com
 description:        theoretical computer science, but mainly etcetera
 author:             Michael Whitmeyer
 baseurl:            /blog
